# aideveu25-llm-obs

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  OLLAMA_GETTING_STARTED.md  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  onCreate.sh  postStart.sh  startup.sh
apps/api/: Dockerfile  main.py
apps/api/config/: system_prompt.txt
apps/api/routers/: inference.py
apps/api/schemas/: request.py  response.py
apps/api/services/: llm_client.py
apps/api/utils/: env.py  pii_masker.py
apps/cli/: Dockerfile  main.py
apps/grafana/: grafana.ini
apps/grafana/dashboards/: llm_observability.json
apps/grafana/provisioning/datasources/: datasources.yaml
apps/grafana/provisioning/org/: org.yaml
apps/grafana_tempo/: tempo.yaml
apps/otel_col/: Dockerfile  otel_config.yaml
apps/prometheus/: prometheus.yml
labs/: LAB_01_BASELINE.md  LAB_02_BASIC_OBSERVABILITY.md  LAB_03_FULL_OBSERVABILITY.md  LAB_04_PRIVACY_OBSERVABILITY.md  README.md
labs/patches/: README.md  lab1-reset-to-baseline.patch  lab2-add-basic-observability.patch  lab3-add-full-observability-stack.patch  lab4-add-privacy-protection.patch
labs/templates/lab1/: docker-compose.yml  inference.py  main.py  pyproject.toml
labs/templates/lab2/: otel_config.yaml  pyproject.toml
labs/templates/lab3/: otel_config.yaml  prometheus.yml  tempo.yaml
labs/templates/lab3/grafana/provisioning/dashboards/: dashboards.yaml
labs/templates/lab4/: Dockerfile  pii_masker.py  pyproject.toml
